infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl # deployment named this
spec:
  replicas: 1 # one instance of the app will run
  selector: # deployment will manage pods with the label app: auth
    matchLabels:
      app: auth
  template: # defines the pod template. label and selector matches so deployment can manage them
    metadata:
      labels:
        app: auth
    spec: # runs container named auth from docker image rallycoding/auth
      containers:
        - name: auth
          image: rallycoding/auth
          env: # injects an environment variable into the container
            - name: MONGO_URI
              value: "mongodb://auth-mongo-srv:27017/auth"
            - name: JWT_KEY # variable name
              valueFrom:
                secretKeyRef: # value is pulled from kubernetes secret with the given name
                  name: jwt-secret
                  key: JWT_KEY
---
apiVersion: v1 # exposes the auth app for communication with other pods in the cluster
kind: Service
metadata:
  name: auth-srv
spec: # service looks for pods with label app:auth
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
## SUMMARY
# deployment (auth-depl) - ensures auth app is running in a pod,
# service(auth-serv) - exposes pods inside the cluster so other services can communicate it on port 3000
