infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec: # defines conatiner inside the pod named expiration-redis
      containers:
        - name: expiration-redis
          image: redis # runs redis image from docker hub (starts a redis server)
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec: # service will route traffic to any pod with label app:auth-mongo
  selector:
    app: expiration-redis
  ports: # uses the mongodb's default port to route traffic
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
## Summary
# deployment(expiration-redis-depl) - runs redis in a container inside a pod
# service (expiration-redis-srv) - exposes redis pod to other services inside the cluster
