infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec: # defines conatiner inside the pod named tickets-mongo
      containers:
        - name: orders-mongo
          image: mongo # runs mongo image from docker hub (starts a MongoDb server)
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec: # service will route traffic to any pod with label app:auth-mongo
  selector:
    app: orders-mongo
  ports: # uses the mongodb's default port to route traffic
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
## Summary
# deployment(orders-mongo-depl) - runs MongoDb in a container inside a pod
# service (orders-mongo-srv) - exposes mongoDb pod to other services inside the cluster
