infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl # deployment named this
spec:
  replicas: 1 # one instance of the app will run
  selector: # deployment will manage pods with the label app: auth
    matchLabels:
      app: payments
  template: # defines the pod template. label and selector matches so deployment can manage them
    metadata:
      labels:
        app: payments
    spec: # runs container named payments from docker image rallycoding/payments
      containers:
        - name: payments
          image: rallycoding/payments
          env: # injects an environment variable into the container
            - name: MONGO_URI
              value: "mongodb://payments-mongo-srv:27017/payments"
            - name: JWT_KEY # variable name
              valueFrom:
                secretKeyRef: # value is pulled from kubernetes secret with the given name
                  name: jwt-secret
                  key: JWT_KEY
            - name: NATS_URL
              value: "http://nats-srv:4222"
            - name: NATS_CLUSTER_ID
              value: ticketing
            - name: NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: STRIPE_KEY
              valueFrom:
                secretKeyRef:
                  name: stripe-secret
                  key: STRIPE_KEY
---
apiVersion: v1 # exposes the payments app for communication with other pods in the cluster
kind: Service
metadata:
  name: payments-srv
spec: # service looks for pods with label app:payments
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
## SUMMARY
# deployment (payments-depl) - ensures payments app is running in a pod,
# service(payments-serv) - exposes pods inside the cluster so other services can communicate it on port 3000
