infra/k8s/payments-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec: # defines conatiner inside the pod named payments-mongo
      containers:
        - name: payments-mongo
          image: mongo # runs mongo image from docker hub (starts a MongoDb server)
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-srv
spec: # service will route traffic to any pod with label app:auth-mongo
  selector:
    app: payments-mongo
  ports: # uses the mongodb's default port to route traffic
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
## Summary
# deployment(payments-mongo-depl) - runs MongoDb in a container inside a pod
# service (payments-mongo-srv) - exposes mongoDb pod to other services inside the cluster
